Target/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:45:38 **** Incremental Build of configuration Debug for project 003BlinkerWLib ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DNUCLEO_F446ZE -DSTM32F4 -DSTM32F446ZETx -c -I../Inc -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Include" -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DNUCLEO_F446ZE -DSTM32F4 -DSTM32F446ZETx -c -I../Inc -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Include" -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DNUCLEO_F446ZE -DSTM32F4 -DSTM32F446ZETx -c -I../Inc -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Include" -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/main.c:23:4: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   23 |   #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |    ^~~~~~~
arm-none-eabi-gcc -o "003BlinkerWLib.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Repos\STM32_BareMetalCourse_GongoraSuarez\Target\003BlinkerWLib\STM32F446ZETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="003BlinkerWLib.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 003BlinkerWLib.elf
 
arm-none-eabi-size  003BlinkerWLib.elf 
arm-none-eabi-objdump -h -S 003BlinkerWLib.elf  > "003BlinkerWLib.list"
   text	   data	    bss	    dec	    hex	filename
    704	      8	   1568	   2280	    8e8	003BlinkerWLib.elf
Finished building: default.size.stdout
 
Finished building: 003BlinkerWLib.list
 
09:35:17 **** Incremental Build of configuration Debug for project 003BlinkerWLib ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DNUCLEO_F446ZE -DSTM32F4 -DSTM32F446ZETx -c -I../Inc -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Include" -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:23:4: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   23 |   #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |    ^~~~~~~
../Src/main.c: In function 'main':
../Src/main.c:34:36: error: 'OUTPUT' undeclared (first use in this function); did you mean 'OUPUT'?
   34 |         pPortBModderReg -> pin_0 = OUTPUT;
      |                                    ^~~~~~
      |                                    OUPUT
../Src/main.c:34:36: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
09:35:57 **** Incremental Build of configuration Debug for project 003BlinkerWLib ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DNUCLEO_F446ZE -DSTM32F4 -DSTM32F446ZETx -c -I../Inc -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Include" -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:23:4: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   23 |   #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |    ^~~~~~~
arm-none-eabi-gcc -o "003BlinkerWLib.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Repos\STM32_BareMetalCourse_GongoraSuarez\Target\003BlinkerWLib\STM32F446ZETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="003BlinkerWLib.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 003BlinkerWLib.elf
 
arm-none-eabi-size  003BlinkerWLib.elf 
arm-none-eabi-objdump -h -S 003BlinkerWLib.elf  > "003BlinkerWLib.list"
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	003BlinkerWLib.elf
Finished building: default.size.stdout
 
Finished building: 003BlinkerWLib.list
 
09:43:27 **** Incremental Build of configuration Debug for project 003BlinkerWLib ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DNUCLEO_F446ZE -DSTM32F4 -DSTM32F446ZETx -c -I../Inc -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Include" -I"D:/Repos/STM32_BareMetalCourse_GongoraSuarez/Target/lib/CMSIS/Device/ST/STM32F4xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:23:4: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   23 |   #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |    ^~~~~~~
arm-none-eabi-gcc -o "003BlinkerWLib.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\Repos\STM32_BareMetalCourse_GongoraSuarez\Target\003BlinkerWLib\STM32F446ZETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="003BlinkerWLib.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 003BlinkerWLib.elf
 
arm-none-eabi-size  003BlinkerWLib.elf 
arm-none-eabi-objdump -h -S 003BlinkerWLib.elf  > "003BlinkerWLib.list"
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	003BlinkerWLib.elf
Finished building: default.size.stdout
 
Finished building: 003BlinkerWLib.list
 
